--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "soidid <soidid@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "async": "^1.4.2",
     "merge": "^1.2.0",
     "promise": "^7.0.4",
     "superagent": "^1.3.0"
