--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rank": "node fetch/index.js && node parse/index.js"
   },
   "author": "soidid <soidid@gmail.com>",
-  "license": "ISC",
+  "private": true,
+  "license": "MIT",
   "dependencies": {
     "async": "^1.4.2",
     "merge": "^1.2.0",
